--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,93 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css');
 @import "tailwindcss";
 @import "tw-animate-css";
 @config "../tailwind.config.js";
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+body {
+  background-color: theme(--color-main-bg);
+}
+
+
+.main {
+  font-family: theme('fontFamily.inter');
+  background-color: #041801;
+  
+  /* SỬA Ở ĐÂY: "backgroundImage" -> "background-image" */
+  background-image: 
+      /* radial-gradient(ellipse at 20% 30%, #0c2218 0%, transparent 60%), */
+      radial-gradient(ellipse at 80% 70%, #041801 0%, transparent 80%),
+      radial-gradient(ellipse at 60% 20%, #246112 0%, transparent 50%),
+      radial-gradient(ellipse at 40% 80%, #308318 0%, transparent 55%);
+  
+  min-height: 100vh;
+  position: relative;
+}
+
+
+.header {
+  background-color: #000000;
+  
+  background-image: 
+      radial-gradient(125% 125% at 50% 100%, #041801 45%, #246112 100%)
+  
+}
+
+
+
+/* === LAYOUT MOBILE */
+.ad_home {
+  display: flex;
+  flex-direction: column; /* Xếp chồng các box theo chiều dọc */
+  gap: 15px;            /* Khoảng cách giữa các box */
+}
+
+.box {
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid theme(--color-main-bg);
+  background-color: #F5F5F0;
+  display: flex; /* Giúp các box con giãn nở tốt hơn */
+  flex-direction: column;
+}
+
+
+/* === LAYOUT DESKTOP */
+/* Áp dụng khi màn hình RỘNG HƠN 1280px */
+@media (min-width: 1280px) {
+  
+  .ad_home {
+    display: grid; 
+    height: 100%;  
+    gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    
+  }
+
+  .box1{
+    grid-column: span 1;
+    grid-row: span 3;
+  }
+
+  .box2{
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+
+  .box3{
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+
+  .box4{
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+}
